2007-10-01 Roman
- !!!:/DB: FireBird DB support modul is added.
- !!!:/UI/Vision: Code audit for primitive "ElFig" is made.


2007-09-28 Maxim
- !!:/UI/Vision: Into primitive 'ElFig' made loading and saving shape's configuration to data model.


2007-09-26 Roman
- !!!!:/SYS: Building on Linux distributions: Debian, Ubuntu and on x86_64 support is added. 
  Checking and name detection for: bison, gettext and QT utilites is made.
- /SYS: Updated Demo DB.
- !!!:/DAQ: The base realisation of transporting OpenSCADA remote DAQs module (Transport) is added.
- !!:/DAQ: Reply DAQs start is made if first start error. Some DAQ-sources can start depend other DAQ-sources.
- !!:/TValue: Service function for access to DAQ parameter's attributes is added.
- !!!:/TArchives: Service function for message archives access is added. begin() and end() functions.
  For messages archive border detection is added.
- !!!!:/TProtocols: Output protocol support is made. Output parts of protocol "SelfSystems" moved to this module.
  For modules: UI.QTCfg, UI.Vision and DAQ.Transport.
- !!!!:/TransportS: All parts for configuration OpenSCADA remote hosts move to "Transport" subsystem.
  For modules: UI.QTCfg, UI.Vision and DAQ.Transport.
- FIX:/DB/MySQL: Session lost is final fixed.
- !!:/DAQ/BlockCalc: Blocks copy function extended to full controllers copy.
- !!:/DAQ/CIF: Asynchronous write mode support is added. For more and frequently data writing.
- !:/UI/VCAEngine, /UI/Vision: First realisation of primitive "Protocol" is added.


2007-09-10 Maxim
- !!:/UI/VCAEngine: Figure's points of the primitive "ElFig" support is added.
- FIX:/UI/Vision: More bugs into primitive "ElFig" is fixed.


2007-09-10 Roman
- FIX:/SYS: RPM-specification file codepage is fixed.
- FIX:/SYS: Default config file DB file name is fixed.
- !!:/SYS: The source tree version changed to 0.6.0.
- FIX:/Config: Automatic fields view mechanism fixed.
- FIX:/Control: A dublicate childs object no deleting is fixed.